@@ -103,7 +103,7 @@ WriteMakefile1(
                prereqs => {
                  runtime => {
                    recommends => {
-                     'Math::Prime::Util::GMP' => 0.26,
+                     'Math::Prime::Util::GMP' => 0,
                      'Math::BigInt::GMP'      => 0,
                      'Math::MPFR'             => 2.03,
                      'Digest::SHA'            => 5.87,
